[package]
name = "learnos_kernel"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "learnos_kernel"
crate-type = ["staticlib"]

[dependencies]
static_assertions = "0.2.5"
bitflags = "1.0.0"

acpi = { path = "../acpi" }
bare_metal = { path = "../bare_metal" }
interrupts = {path = "../interrupts"}
multiboot2 = {path = "../multiboot2"}
spinlock = {path = "../spinlock"}

[build-dependencies]
nasm-rs = "0.1.3"
