[package]
name = "learnos_kernel"
version = "0.1.0"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "learnos_kernel"
crate-type = ["staticlib"]

[dependencies]
static_assertions = "0.3.1"
bitflags = "1.0.4"
log = "0.4.6"
spin = "0.4.10"
lazy_static = { version = "1.2.0", features = ["spin_no_std"] }

acpi = { path = "../acpi" }
amd64 = { path = "../amd64" }
kmem = { path = "../kmem" }
multiboot2 = {path = "../multiboot2"}

[build-dependencies]
nasm-rs = "0.1.3"
